--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,7 +202,9 @@ input, select, textarea {
 	}
 
 /* Container */
-
+.lowercase{
+text-transform: lowercase;
+}
 	.container {
 		margin: 0 auto;
 		max-width: 100%;
