--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,17 +51,11 @@ table {
 	border-spacing: 0;
 }
 
-.containers{
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        flex-direction: column;
-        padding: 10px;
-        color: #757575;
-        font-size: 1rem;
-        height: 300px;
-	background-color: #fff;
-    }
+#containerModif{
+	display:flex;
+	align-items: center;
+	justify-content: space-around;
+}
 
 body {
 	-webkit-text-size-adjust: none;
