--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,6 +56,8 @@ table {
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
+	height: 400px;
+	width: 100%;
 }
 
 body {
