--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -204,6 +204,11 @@ input, select, textarea {
 	}
 
 /* Container */
+	.container
+	{
+	position: relative;
+	}
+
 	.container iframe
 	{
 	position: absolute;
