--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -220,7 +220,7 @@ input, select, textarea {
   	width: 100%;
   	height: 100%;
 	}
-	.container {
+	{
 		margin: 0 auto;
 		max-width: 100%;
 		width: 70em;
