--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1497,7 +1497,11 @@ input, select, textarea {
 /* Image */
 
 	.image {
-		border-radius: 5px
+		-moz-transition: border-radius: 5px;
+		-webkit-transition: border-radius: 5px;
+		-ms-transition: border-radius: 5px;
+		transition: opacity 0.25s ease-in-out;
+		display: inline-block;
 	}
 
 		.image:hover {
