--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1497,11 +1497,13 @@ input, select, textarea {
 /* Image */
 
 	.image {
-		-moz-transition: border-radius: 5px;
-		-webkit-transition: border-radius: 5px;
-		-ms-transition: border-radius: 5px;
+		border-radius: 5%;
+		-moz-transition: opacity 0.25s ease-in-out;
+		-webkit-transition: opacity 0.25s ease-in-out;
+		-ms-transition: opacity 0.25s ease-in-out;
 		transition: opacity 0.25s ease-in-out;
 		display: inline-block;
+		border: solid 6px #ebebeb !important;
 	}
 
 		.image:hover {
