--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1502,7 +1502,7 @@ input, select, textarea {
 		-ms-transition: opacity 0.25s ease-in-out;
 		transition: opacity 0.25s ease-in-out;
 		display: inline-block;
-		border: solid 6px #ebebeb !important;
+		border: ;
 	}
 
 		.image:hover {
