--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1501,6 +1501,7 @@ input, select, textarea {
 		-webkit-transition: opacity 0.25s ease-in-out;
 		-ms-transition: opacity 0.25s ease-in-out;
 		transition: opacity 0.25s ease-in-out;
+		display: inline-block;
 	}
 
 		.image:hover {
