--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,15 @@ footer, header, hgroup, menu, nav, section {
 	display: block;}
 
 body {
+    -youbkit-touch-callout: none; /* iOS Safari */
+    -youbkit-user-select: none;   /* Chrome 6.0+, Safari 3.1+, Edge & Opera 15+ */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;        /* IE 10+ and Edge */
+    user-select: none;            /* Non-prefixed version,
+                                currently supported by Chrome and Opera */
+}
+
+body {
 	line-height: 1;
 }
 
