--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,44 @@ body {
     user-select: none;            /* Non-prefixed version,
                                 currently supported by Chrome and Opera */
 }
+.reveal-loaded .reveal [class*="reveal-"] {
+  opacity: 0!important;
+  animation: none!important;
+  transition: 0s!important;
+}
 
+.reveal-loaded [class*="reveal-"]{
+  animation: revealAnimation 1s cubic-bezier(.5, 0, 0, 1) both;
+}
+
+.reveal-loaded .reveal-2 {
+  animation-delay: .1s;
+}
+
+.reveal-loaded .reveal-3 {
+  animation-delay: .2s;
+}
+
+.reveal-loaded .reveal-4 {
+  animation-delay: .3s;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .reveal-loaded  [class*="reveal-"] {
+    animation: none!important;
+  }
+}
+
+@keyframes revealAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 body {
 	line-height: 1;
 }
