--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,29 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
+Head {
+	.reveal-loaded .reveal [class*="reveal-"] {
+    opacity: 0;
+    transform: translateY(30px);
+}
+
+.reveal-loaded [class*="reveal"]{
+    transition: 1s cubic-bezier(.5, 0, 0, 1);
+}
+
+/* On ajoute du délai */
+.reveal-loaded .reveal-2 {
+    transition-delay: .1s;
+}
+
+.reveal-loaded .reveal-3 {
+    transition-delay: .2s;
+}
+
+.reveal-loaded .reveal-4 {
+    transition-delay: .3s;
+}
+	
 body {
     -youbkit-touch-callout: none; /* iOS Safari */
     -youbkit-user-select: none;   /* Chrome 6.0+, Safari 3.1+, Edge & Opera 15+ */
@@ -43,38 +66,6 @@ body {
   transition: 0s!important;
 }
 
-.reveal-loaded [class*="reveal-"]{
-  animation: revealAnimation 1s cubic-bezier(.5, 0, 0, 1) both;
-}
-
-.reveal-loaded .reveal-2 {
-  animation-delay: .1s;
-}
-
-.reveal-loaded .reveal-3 {
-  animation-delay: .2s;
-}
-
-.reveal-loaded .reveal-4 {
-  animation-delay: .3s;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .reveal-loaded  [class*="reveal-"] {
-    animation: none!important;
-  }
-}
-
-@keyframes revealAnimation {
-  0% {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
 body {
 	line-height: 1;
 }
