--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -273,6 +273,20 @@ input, select, textarea {
 
 		}
 
+		.typed-out{
+  overflow: hidden;
+  border-right: .15em solid orange;
+  white-space: nowrap;
+  animation: 
+    typing 1s forwards;
+  font-size: 1.6rem;
+  width: 0;
+}
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
 /* Row */
 
 	.row {
