--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -272,7 +272,9 @@ input, select, textarea {
 			}
 
 		}
-
+		.container{
+  		display: inline-block;
+		}
 		.typed-out{
   overflow: hidden;
   border-right: .15em solid orange;
