--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -273,22 +273,22 @@ input, select, textarea {
 
 		}
 		.container{
-  		display: inline-block;
+  			display: inline-block;
 		}
 		.typed-out{
-  overflow: hidden;
-  border-right: .15em solid orange;
-  white-space: nowrap;
-  animation: 
-    typing 1s steps(20, end) forwards,
-      blink .8s infinite;
-  font-size: 1.6rem;
-  width: 0;
-}
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
+  			overflow: hidden;
+  			border-right: .15em solid black;
+  			white-space: nowrap;
+  			animation: 
+    			typing 1s steps(20, end) forwards,
+      			blink .8s infinite;
+  			font-size: 1.6rem;
+  			width: 0;
+		}
+		@keyframes typing {
+  			from { width: 0 }
+  			to { width: 100% }
+		}
 
 /* Row */
 
