--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -215,8 +215,7 @@ input, select, textarea {
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
 body{
-  padding: 40px;
-  background-color: #4268a5;  
+  padding: 40px;  
 }
 
 p {
@@ -224,7 +223,7 @@ p {
   overflow: hidden;    
   font-family: 'Source Code Pro', monospace;  
   font-size: 28px;
-  color: rgba(255,255,255,.70);
+  color: black(255,255,255,.70);
 }
 
 /* Animation */
