--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,6 +213,36 @@ input, select, textarea {
 	}
 
 /* Container */
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+
+	.wrapper {
+  height: 100vh;
+  /*This part is important for centering*/
+  display: grid;
+  place-items: center;
+}
+
+.typing-demo {
+  width: 34ch;
+  animation: typing 2s steps(34), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 28px;
+}
+
+/* Animation */
+p{
+  animation: animated-text 2s steps(30,end) 1s 1 normal both;
+}
+
+/* text animation */
+
+@keyframes animated-text{
+  from{width: 0;}
+  to{width: 472px;}
+}
 	.conteneur {
   		position: relative;
   		overflow: hidden;
