--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,6 +213,10 @@ input, select, textarea {
 	}
 
 /* Container */
+	.ml3 {
+  		font-weight: 900;
+  		font-size: 3.5em;
+	}
 	.conteneur {
   		position: relative;
   		overflow: hidden;
