--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,9 +213,24 @@ input, select, textarea {
 	}
 
 /* Container */
-	.ml3 {
+	.ml6 {
+  		position: relative;
   		font-weight: 900;
-  		font-size: 3.5em;
+  		font-size: 3.3em;
+	}
+
+	.ml6 .text-wrapper {
+  		position: relative;
+  		display: inline-block;
+  		padding-top: 0.2em;
+  		padding-right: 0.05em;
+  		padding-bottom: 0.1em;
+  		overflow: hidden;
+	}
+
+	.ml6 .letter {
+  		display: inline-block;
+  		line-height: 1em;
 	}
 	.conteneur {
   		position: relative;
