--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,6 +213,25 @@ input, select, textarea {
 	}
 
 /* Container */
+	.top {
+  margin: 0;
+  position: relative;
+  width: 100%;
+  background-color: #aaa;
+  height: 300px;
+  opacity: 1;
+  text-align: center;
+  font-family: 'helvetica';
+  font-size: 80px;
+  font-weight: 100;
+  color: #fff;
+}
+
+.title {
+  position: absolute;
+  top: 60%;
+  left: 100px;
+}
 	.ml6 {
   		position: relative;
   		font-weight: 900;
