--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,12 +217,12 @@ input, select, textarea {
   margin: 0;
   position: relative;
   width: 100%;
-  background-color: white;
-  height: 50px;
+  background-color: #FFFFFF;
+  height: 5px;
   opacity: 1;
   text-align: center;
   font-family: 'helvetica';
-  font-size: 50px;
+  font-size: 5px;
   font-weight: 100;
   color: #fff;
 }
