--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,7 +217,7 @@ input, select, textarea {
   margin: 0;
   position: relative;
   width: 100%;
-  background-color: #FFFFFF;
+  background-color: #fff;
   height: 75px;
   opacity: 1;
   text-align: center;
