--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,6 +213,12 @@ input, select, textarea {
 	}
 
 /* Container */
+	.fade {
+  	margin: 50px;
+  	padding: 50px;
+  	background-color: lightgreen;
+  	opacity: 1;
+	}
 	.ml6 {
   		position: relative;
   		font-weight: 900;
