--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,7 +216,7 @@ input, select, textarea {
 	.fade {
   	margin: 50px;
   	padding: 50px;
-  	background-color: lightgreen;
+  	background-color: ;
   	opacity: 1;
 	}
 	.ml6 {
