--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,7 +214,7 @@ input, select, textarea {
 
 /* Container */
 	.page-header {
-	background-color: #FF8A5B;
+	background-color: #FFFFFF;
 	border-radius: 16px;
 	padding: 100px 40px;
 	margin-bottom: 40px;
