--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,15 +226,13 @@ body {
   opacity: 1;
   text-align: center;
   font-family: 'helvetica';
-  font-size: 16px;
+  font-size: 22px;
   font-weight: 100;
   color: ;
 }
 
 .title {
-  position: absolute;
-  top: 60%;
-  left: 100px;
+  position: static;
 }
 
 /* Container */
