--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -221,15 +221,15 @@ body {
 
 .top {
   margin: 0;
-  position: static;
+  position: relative;
   width: 100%;
   background-color: #fff;
-  height: 50px;
+  height: 100px;
   opacity: 1;
   text-align: center;
   font-family: 'helvetica';
-  font-size: 18px;
-  font-weight: 50;
+  font-size: 16px;
+  font-weight: 40;
   color: ;
 }
 
