--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,28 +214,21 @@ input, select, textarea {
 
 /* Container */
 
-body {
-  margin: 0;
-  height: 1000px;
-}
+	.page-header {
+		background-color: #fff;
+		border-radius: 16px;
+		padding: 100px 40px;
+		margin-bottom: 40px;
+	}
 
-.top {
-  margin: 0;
-  position: relative;
-  width: 100%;
-  background-color: #fff;
-  height: 40px;
-  opacity: 1;
-  text-align: center;
-  font-family: 'helvetica';
-  font-size: 18px;
-  font-weight: 40;
-  color: ;
-}
+	h1 {
+		margin: 0;
+		color: ;
+		font-size: 30px;
+		text-align: center;
+		font-family: sans-serif;
+	}
 
-.title {
-  position: static;
-}
 
 	.ml6 {
   		position: relative;
