--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -229,6 +229,10 @@ input, select, textarea {
 		font-family: sans-serif;
 	}
 
+	p {
+		font-size: 16px;
+		line-height: 1.3;
+	}
 
 	.ml6 {
   		position: relative;
