--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -219,13 +219,13 @@ input, select, textarea {
   		position: static;
   		width: 100%;
   		background-color: #fff;
-  		height: 30px;
+  		height: 40px;
   		opacity: 1;
   		text-align: center;
   		font-family: 'helvetica';
   		font-size: 16px;
   		font-weight: 36;
-  		color: #fff;
+  		color: ;
 	}
 
 	.title {
