--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,7 +218,7 @@ input, select, textarea {
   		margin: 0;
   		position: static;
   		width: 100%;
-  		background-color: #fff;
+  		background-color: #7ee787;
   		height: 40px;
   		opacity: 1;
   		text-align: center;
