--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,8 +218,8 @@ input, select, textarea {
   		margin: 0;
   		position: static;
   		width: 100%;
-  		background-color: #7ee787;
-  		height: 40px;
+  		background-color: #fff;
+  		height: 30px;
   		opacity: 1;
   		text-align: center;
   		font-family: 'helvetica';
