--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,6 +83,22 @@ input, select, textarea {
 	appearance: none;
 }
 
+/* Configure this in Tailwind.config.js */
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 2s ease-in forwards;
+}
+
 /* Basic */
 
 	html {
