--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,6 +230,10 @@ input, select, textarea {
 
 /* Container */
 
+	.fade {
+  opacity: 0;
+}
+
 	.ml6 {
   		position: relative;
   		font-weight: 900;
