--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,6 +228,9 @@ input, select, textarea {
 		clear: both;
 	}
 
+// Reveal on scroll
+.revealOnScroll { opacity: 0; }
+
 /* Container */
 
 	.ml6 {
