--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1903,7 +1903,7 @@ input, select, textarea {
 	}
 
 	.box.excerpt .date {
-		background: #1D1D1F;
+		background: #878787;
 		color: #fff;
 		font-weight: 400;
 		text-transform: uppercase;
