--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -265,7 +265,7 @@ h1.main, p.demos {
 	background: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
 }
 .sp-content {
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	left: 0px;
@@ -273,7 +273,7 @@ h1.main, p.demos {
 	z-index: 1000;
 }
 .sp-container h2 {
-	position: fixed;
+	position: absolute;
 	top: 50%;
 	line-height: 100px;
 	height: 90px;
