--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1978,7 +1978,7 @@ input, select, textarea {
 		#header h1 {
 			font-family: 'Arvo';
 			font-weight: 700;
-			color: #ed786a;
+			color: #0066CC;
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
 			font-size: 3em;
 			letter-spacing: 13px;
@@ -1990,8 +1990,8 @@ input, select, textarea {
 
 		#header p {
 			text-transform: uppercase;
-			font-weight: 400;
-			color: #888;
+			font-weight: 600;
+			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
 			font-size: 0.85em;
 			letter-spacing: 3px;
