--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1989,9 +1989,9 @@ input, select, textarea {
 			}
 
 		#header p {
-			text-transform: uppercase;
+			text-transform:;
 			font-weight: 400;
-			color: #0066cc;
+			color: #ed786a;
 			margin: 2.5em 0 0 0;
 			font-size: 1.25em;
 			letter-spacing: 3px;
