--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1991,7 +1991,7 @@ input, select, textarea {
 		#header p {
 			text-transform:;
 			font-weight: 400;
-			color: #ed786a;
+			color: #1d1d1f;
 			margin: 2.5em 0 0 0;
 			font-size: 1.5em;
 			letter-spacing: 3px;
