--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1989,11 +1989,11 @@ input, select, textarea {
 			}
 
 		#header p {
-			text-transform:;
+			text-transform: uppercase;
 			font-weight: 400;
 			color: #1d1d1f;
 			margin: 2.5em 0 0 0;
-			font-size: 1.5em;
+			font-size: 1em;
 			letter-spacing: 3px;
 			text-align: center;
 		}
