--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -127,7 +127,7 @@ input, select, textarea {
 	body, input, textarea, select {
 		font-family: 'Source Sans Pro';
 		font-weight: 300;
-		color: #777;
+		color: #1d1d1f;
 		line-height: 1.65em;
 		font-size: 15pt;
 	}
