--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1991,7 +1991,7 @@ input, select, textarea {
 		#header p {
 			text-transform: uppercase;
 			font-weight: 400;
-			color: #888;
+			color: #6E6E73;
 			margin: 2.5em 0 0 0;
 			font-size: 1em;
 			letter-spacing: 3px;
