--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Arvo:700");
 
 /*
-	Strongly Typed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-	CHANGES WERE MADE.
+	Alptra website
+
+	Template Strongly Typed by HTML5 UP, free for personal and commercial use under the CCA 3.0 license (html5up.net/license). Html5up.net | @ajlkn | aj@lkn.io | AJ.
+	Changes were made.
 */
 
 html, body, div, span, applet, object,
