--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2001,26 +2001,22 @@ input, select, textarea {
 
 /* Nav */
 
-body { font-family: sans-serif; }
-
-#main-menu .nav-bar { list-style:none; margin-top: 100px; }
-#main-menu .nav-bar li { display:inline; padding:0 10px; }
-
-#main-menu .nav-bar li a {
-  text-decoration: none;
-  padding-left: 1400px;
-  text-transform: uppercase;
-  color: #333;
-	text-shadow: 1px 1px 1px #ccc;
+#navbar-primary.navbar-default {
+  background: transparent;
+  border: none;
+  .navbar-nav { 
+    width: 100%;
+    text-align: center;
+    > li {
+      display: inline-block;
+      float: none;
+      > a {
+        padding-left: 30px;
+        padding-right: 30px;
+        }
+    }
+  }
 }
-
-.nav-bar .nav-button-home a { background:url("https://www.cheesetoast.co.uk/cheesepress/wp-content/uploads/2012/08/home.gif") no-repeat 0px -2px transparent; }
-
-.nav-bar .nav-button-services a { background:url("https://www.cheesetoast.co.uk/cheesepress/wp-content/uploads/2012/08/services.gif") no-repeat 0px -2px transparent; }
-
-.nav-bar .nav-button-products a { background:url("https://www.cheesetoast.co.uk/cheesepress/wp-content/uploads/2012/08/products.gif") no-repeat 0px -2px transparent; }
-
-/* Icons courtesy of Thom : http://pixelb.in/assorted-pixel-perfect-14px-icon-set-286/ */
 
 	#nav {
 		position: absolute;
