--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,16 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
+*, *:before, *:after {
+    -moz-box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background: #FFFFFF;
+}
+
 a, a:visited {
     outline: medium none;
     text-decoration: none;
