--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,8 +5,8 @@
 /*
 	Alptra website
 
-	html5up.net | Template Strongly Typed by HTML5 UP, free for personal and commercial use under the CCA 3.0 license (html5up.net/license). @ajlkn | aj@lkn.io | AJ.
-	Changes were made.
+	(html5up.net | Template Strongly Typed by HTML5 UP, free for personal and commercial use under the CCA 3.0 license (html5up.net/license). @ajlkn | aj@lkn.io | AJ.
+	Changes were made.)
 */
 
 html, body, div, span, applet, object,
