--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -309,6 +309,14 @@ input, select, textarea {
 
 		}
 	
+	.contact-container {
+  width: 100%;
+  /*   padding-top: 20%; */
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
 /* Row */
 
 	.row {
