--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,24 +82,19 @@ input::-moz-focus-inner {
 }
 
 input, select, textarea {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	-ms-appearance: none;
+	appearance: none;
+}
+
+input, select, textarea {
   background: none;
   color: #646464;
   font-family: "Lato", Helvetica, sans-serif;
   font-size: 15pt;
   font-weight: 300;
   line-height: 1.75em;
-}
-
-input, textarea {
-  border: none !important;
-  outline: none !important;
-  resize: none !important;
-  width: 100% !important;
-  -moz-appearance: none !important;
-  -webkit-appearance: none !important;
-  -o-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
 }
 
 /* Configure this in Tailwind.config.js */
