--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2277,7 +2277,7 @@ a, a:visited {
 /* Copyright */
 
 	#copyright {
-		border-top: solid 2px #e5e5e5;
+		border-top: solid 2px #f0f0f0;
 		text-align: center;
 		margin-top: 6em;
 		padding-top: 4em;
