--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2342,7 +2342,7 @@ input[type="checkbox"] + label:before {
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
-.button {
+.bouton {
   -moz-appearance: none;
   -webkit-appearance: none;
   -o-appearance: none;
