--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,6 +109,28 @@ input, textarea {
   appearance: none;
 }
 
+ul {
+  list-style: disc;
+  margin: 0 0 2em 0;
+  padding-left: 1em;
+}
+
+ul.actions {
+  cursor: default;
+  list-style: none;
+  padding-left: 0;
+}
+
+ul.actions li {
+  display: inline-block;
+  padding: 0 1em 0 0;
+  vertical-align: middle;
+}
+
+ul.actions li:last-child {
+  padding-right: 0;
+}
+
 /* Configure this in Tailwind.config.js */
 
 @keyframes fadeIn {
