--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2293,7 +2293,7 @@ a, a:visited {
 		position: relative;
 		overflow: hidden;
 		border-top: solid 2px #e5e5e5;
-		background: #f0f0f0;
+		background: #fff;
 		padding: 6em 0 8em 0;
 	}
 
