--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2320,7 +2320,7 @@ a, a:visited {
 /* Copyright */
 
 	#copyright {
-		border-top: solid 2px #fff;
+		border-top: solid 2px #f0f0f0;
 		text-align: center;
 		margin-top: 6em;
 		padding-top: 4em;
