--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2384,7 +2384,7 @@ input[type="checkbox"] + label:before {
 
 input[type="submit"],
 input[type="reset"],
-input[type="button"],
+input[type="bouton"],
 .bouton {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -2418,7 +2418,7 @@ input[type="button"],
 
 input[type="submit"]:hover,
 input[type="reset"]:hover,
-input[type="button"]:hover,
+input[type="bouton"]:hover,
 .bouton:hover {
   background-color: rgba(144, 144, 144, 0.075);
   color: #545454 !important;
@@ -2426,21 +2426,21 @@ input[type="button"]:hover,
 
 input[type="submit"]:active,
 input[type="reset"]:active,
-input[type="button"]:active,
+input[type="bouton"]:active,
 .bouton:active {
   background-color: rgba(144, 144, 144, 0.2);
 }
 
 input[type="submit"].icon,
 input[type="reset"].icon,
-input[type="button"].icon,
+input[type="bouton"].icon,
 .bouton.icon {
   padding-left: 1.35em;
 }
 
 input[type="submit"].icon:before,
 input[type="reset"].icon:before,
-input[type="button"].icon:before,
+input[type="bouton"].icon:before,
 .bouton.icon:before {
   margin-right: 0.5em;
 }
@@ -2519,7 +2519,7 @@ input[type="button"].icon:before,
   height: 30px;
 }
 
-.cd-close-button {
+.cd-close-bouton {
   color: #545454;
   border-bottom: none;
 }
