--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3057,8 +3057,8 @@ label:hover {
 
 input[type="submit"],
 input[type="reset"],
-input[type="button"],
-.button {
+input[type="bouton"],
+.bouton {
   -moz-appearance: none;
   -webkit-appearance: none;
   -o-appearance: none;
@@ -3091,30 +3091,30 @@ input[type="button"],
 
 input[type="submit"]:hover,
 input[type="reset"]:hover,
-input[type="button"]:hover,
-.button:hover {
+input[type="bouton"]:hover,
+.bouton:hover {
   background-color: rgba(144, 144, 144, 0.075);
   color: #545454 !important;
 }
 
 input[type="submit"]:active,
 input[type="reset"]:active,
-input[type="button"]:active,
-.button:active {
+input[type="bouton"]:active,
+.bouton:active {
   background-color: rgba(144, 144, 144, 0.2);
 }
 
 input[type="submit"].icon,
 input[type="reset"].icon,
-input[type="button"].icon,
-.button.icon {
+input[type="bouton"].icon,
+.bouton.icon {
   padding-left: 1.35em;
 }
 
 input[type="submit"].icon:before,
 input[type="reset"].icon:before,
-input[type="button"].icon:before,
-.button.icon:before {
+input[type="bouton"].icon:before,
+.bouton.icon:before {
   margin-right: 0.5em;
 }
 
