--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3135,6 +3135,28 @@ input[type="bouton"].icon:before,
 					margin-top: 0;
 				}
 
+ul {
+  list-style: disc;
+  margin: 0 0 2em 0;
+  padding-left: 1em;
+}
+
+ul.actions {
+  cursor: default;
+  list-style: none;
+  padding-left: 0;
+}
+
+ul.actions li {
+  display: inline-block;
+  padding: 0 1em 0 0;
+  vertical-align: middle;
+}
+
+ul.actions li:last-child {
+  padding-right: 0;
+}
+		
 		/* Box */
 
 			.box.excerpt header {
