--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,7 +212,7 @@ ul.actions li:last-child {
 		transition: color 0.25s ease-in-out, border-bottom-color 0.25s ease-in-out;
 		color: #666;
 		text-decoration: none;
-		border-bottom: solid 1px #ddd;
+		border-bottom:;
 	}
 
 		a strong {
