--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3007,6 +3007,10 @@ label:hover {
 
 /* Small */
 
+	#navPanel, #titleBar {
+		display: none;
+	}
+
 	@media screen and (max-width: 736px) {
 
 		/* Basic */
