--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3006,6 +3006,10 @@ label:hover {
 	}
 
 /* Small */
+	
+	#navPanel, #titleBar {
+		display: none;
+	}
 
 	@media screen and (max-width: 736px) {
 
