--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -296,6 +296,7 @@ ul.actions li:last-child {
 	.ml6 .letter {
   		display: inline-block;
   		line-height: 1em;
+		font-size: #B0392E;
 	}
 	.conteneur {
   		position: relative;
