--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -282,6 +282,7 @@ ul.actions li:last-child {
   		position: relative;
   		font-weight: 900;
   		font-size: 3.3em;
+		color: #B0392E;
 	}
 
 	.ml6 .text-wrapper {
