--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2048,7 +2048,7 @@ ul.actions li:last-child {
 		#header p {
 			text-transform: uppercase;
 			font-weight: 400;
-			color: #6E6E73;
+			color: #008248;
 			margin: 2.5em 0 0 0;
 			font-size: 1.15em;
 			letter-spacing: 3px;
