--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2035,7 +2035,7 @@ ul.actions li:last-child {
 		#header h1 {
 			font-family: 'Arvo';
 			font-weight: 700;
-			color: #6E6E73;
+			color: #424245;
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
 			font-size: 3em;
 			letter-spacing: 13px;
