--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2090,7 +2090,7 @@ a, a:visited {
     padding: 5px 15px;
     text-transform: uppercase;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-    color: #424245;  
+    color: #1D1D1F;  
 }
 
 .nav li a:hover, .nav li a:active {
