--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2046,7 +2046,7 @@ ul.actions li:last-child {
 			}
 
 		#header p {
-			text-transform: uppercase;
+			text-transform:;
 			font-weight: 900;
 			color: #86868B;
 			margin: 2.5em 0 0 0;
