--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2048,7 +2048,7 @@ ul.actions li:last-child {
 		#header p {
 			text-transform:;
 			font-weight: 900;
-			color: #86868B;
+			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
 			font-size: 1.5em;
 			letter-spacing: 3px;
