--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2094,7 +2094,7 @@ a, a:visited {
 }
 
 .nav li a:hover, .nav li a:active {
-    color: #DED4B1;
+    color: #B0392E;
     text-decoration: none;
 }
 
