--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2113,11 +2113,12 @@ html {
 			}
 
 		#header p {
-			text-transform:;			
+			text-transform:;
+			font-family: 'Arvo';			
 			font-weight: 400;
 			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
-			font-size: 1.5em;
+			font-size: 1.15em;
 			letter-spacing: 3px;
 			text-align: center;
 		}
