--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2100,7 +2100,7 @@ html {
 		}
 
 		#header h1 {
-			font-family: 'Futura';			
+			font-family: 'Baltica';			
 			font-weight: 900;
 			color: #1D1D1F;
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
@@ -2115,7 +2115,7 @@ html {
 		#header p {
 			text-transform:;
 		font-family: 'Neo Sans';			
-			font-weight: 900;
+			font-weight: 700;
 			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
 			font-size: 1.50em;
