--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2114,8 +2114,8 @@ html {
 
 		#header p {
 			text-transform:;
-			font-family: 'Steak';			
-			font-weight: 700;
+			font-family: 'Neo Sans';			
+			font-weight: 400;
 			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
 			font-size: 1.50em;
