--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2116,7 +2116,7 @@ html {
 			text-transform:;
 			font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
 			font-weight: 600;
-			color: #1D1D1F;
+			color: #86868B;
 			margin: 2.5em 0 0 0;
 			font-size: 1.50em;
 			letter-spacing: 3px;
